--- a/CritStrike/Index.html
+++ b/CritStrike/Index.html
@@ -2,9 +2,23 @@
 <html>
 <head>
     <meta charset="utf-8" />
+    <link rel="stylesheet" type="text/css" href="CSS/Desktop.css">
     <title>x Critical Strike x</title>
 </head>
 <body>
+    <header>
+        <h2>x Critical Strike x</h2>
+        <p>Feel good bouncy Chiptune, from Middlesbrough!</p>
+        <a href="http://www.phoenixflamephotos.tumblr.com" target="_blank">By Kurt Pritchard</a>
+    </header>
+    <br />
+    <div class="row">
+        <div class="column"><img src="Images/RainbowStorm.jpg"/></div>
+        <div class="column"><img src="Images/NeverLetGo.jpg" /></div>
+        <div class="column"><img src="Images/Starfighter.jpg"/></div>
+    </div> 
 
+    <h1> Lets try some stuff around here?</h1>
+    <p> I don't fucking know.</p>
 </body>
 </html>
