--- a/CritStrike/About.html
+++ b/CritStrike/About.html
@@ -1,10 +1,37 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>x CriticalStrike x</title>
+    <link href="StyleSheet.css" rel="stylesheet" />.
+    <link href="StyleNav.css" rel="stylesheet" />
+    <link rel="shortcut icon" href="images/gameboy.ico">
+
 </head>
 <body>
+    <ul>
+        <li><a href="Home.html">Home</a></li>
+        <li><a href="#news">News</a></li>
+        <li><a href="#contact">Contact</a></li>
+        <li><a class="active" href="About.html">About</a></li>
+    </ul>
+    <img src="images/CRIT 2 Glow.png" class="center" />
+    
+    <table style="width: 50%;" cellpadding="20" align="center">
+        <tr>
+            <td>Bacon ipsum dolor amet t-bone nulla fugiat do short loin tri-tip id velit veniam pastrami nisi laborum voluptate officia. Enim tongue magna in sirloin occaecat short loin tri-tip landjaeger pariatur sint venison ea fugiat. Frankfurter in cow, sed rump ribeye swine biltong doner turducken shankle aliquip ham strip steak shank. Consectetur lorem elit dolore, exercitation adipisicing eu. Kielbasa ham pork loin anim pork chop boudin turducken turkey andouille ground round nulla fugiat. Drumstick spare ribs flank cillum chicken, kevin et turkey tenderloin quis occaecat pork loin. T-bone flank pastrami salami short ribs, dolor leberkas velit cupidatat pork short loin burgdoggen kielbasa dolore eiusmod.</td>
+            <td>
+                Special thanks to Nintendoom, Jo Smeets, RoccoW, Tom Parsons, Kim Vrancken, CFGK24, Bavaal, Kurt Pritchard, Squaresounds, Chipbattles@Gamefaceshow, Matt Whitwell, Graeme Booth, , Idiotbox, Chiptunes=Win, B-type, Nicholas Mark Scott, Heather and Zak, The Tees Squadron, Shawn Penrose and Viki, Matthew Watson all my friends and family, and everyone who has supported me and my music <3 Much love to you all!
+                                                                                                                                                                                                                                                                                                                                                                                                                 Emma would also like to thank Ollie, her Mam and Dad, Jenny Tait, Davy O and Lil Elise, and Kerry Dave and Jimmy from Manic Monday for all the support!
+            </td>
+            <td><img src="images/GSoloResize.PNG" /></td>
+        </tr>
+    </table>
 
+
+    <footer>
+        <br /><div id="ccFooterLogo"><a href="https://www.facebook.com/xcriticalstrikex/"><img src="images/32px_PNG/facebook.png" /></a> <a href="https://twitter.com/xcritstrikex"><img src="images/32px_PNG/twitter.png" /></a> <a href="https://www.youtube.com/user/Psychog13"><img src="images/32px_PNG/youtube.png" /></a></><br />
+    </footer>
 </body>
 </html>
+
