--- a/CritStrike/Home.html
+++ b/CritStrike/Home.html
@@ -3,18 +3,33 @@
 <head>
     <meta charset="utf-8" />
     <title>x CriticalStrike x</title>
-    <link href="StyleSheet.css" rel="stylesheet" />.
-    <link href="StyleNav.css" rel="stylesheet" />
+    <link href="StyleSheet.css" rel="stylesheet" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" href="images/gameboy.ico">
 </head>
 <body>
-
-    <ul>
-        <li><a class="active" href="Home.html">Home</a></li>
-        <li><a href="#news">News</a></li>
-        <li><a href="#contact">Contact</a></li>
-        <li><a href="About.html">About</a></li>
-    </ul>
+    <header class="clearfix">
+        <div class="container">
+            <div class="header-left">
+                <h1>Stay Positive, always! ☺</h1>
+            </div>
+            <div class="header-right">
+                <label for="open">
+                    <span class="hidden-desktop"></span>
+                </label>
+                <input type="checkbox" name="" id="open">
+                <nav>
+                    <a href="Home.html">Home</a>
+                    <a href="About.html">About</a>
+                    <a href="https://xcriticalstrikex.bandcamp.com/">Music</a>
+                    <a href="Lyrics.html">Lyrics</a>
+                    <a href="#">Contact</a>
+                </nav>
+            </div>
+        </div>
+    </header>
     <img src="images/CRIT 2 Glow.png" class="center" />
     <br />
 
@@ -26,7 +41,7 @@
 
 
     <footer>
-        <br /><div id="ccFooterLogo"><a href="https://www.facebook.com/xcriticalstrikex/"><img src="images/32px_PNG/facebook.png" /></a> <a href="https://twitter.com/xcritstrikex"><img src="images/32px_PNG/twitter.png" /></a> <a href="https://www.youtube.com/user/Psychog13"><img src="images/32px_PNG/youtube.png" /></a></><br />
+        <br /><div id="ccFooterLogo"><a href="https://www.facebook.com/xcriticalstrikex/"><img src="images/32px_PNG/facebook.png" /></a> <a href="https://twitter.com/xcritstrikex"><img src="images/32px_PNG/twitter.png" /></a> <a href="https://www.youtube.com/user/Psychog13"><img src="images/32px_PNG/youtube.png" /></a></><br /></div>
 </footer>
 </body>
 </html>
